# glfw-snippet

./: CMakeLists.txt
src/: font.cpp  font.hpp  fragment.glsl  loader.cpp  loader.hpp  main.cpp  shader.cpp  shader.hpp  vertex.cpp  vertex.glsl  vertex.hpp  window.cpp  window.hpp
